--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <title>Simple File Upload</title>
 </head>
 <body>
-    <h1>Upload a File</h1>
-<form action="/upload.php" method="POST" enctype="multipart/form-data">
-    <input type="file" name="file" />
-    <input type="submit" value="Upload" />
+    <hr>
+    <h1>Upload a File for stations</h1>
+    <form action="/upload_stations.php" method="POST" enctype="multipart/form-data">
+        <input type="file" name="file" />
+        <input type="submit" value="Upload" />
+    <hr>
 </form>
 </body>
 </html>
